--- a/README
+++ b/README
@@ -1,10 +1,14 @@
-#Ponchik Backend
-##What is this?
-Ponchik means doughnut in Russian, which has zero significance other than it's easy to pronounce, remember, sounds good
-when said in english, and most importantly ponchiks are delicious! So what is this project? Well it's a long thought of
-project for learning to read Russian. I want it to be be more than just a 'click the word to translate reader,' since
-Russian has a lot of morphing going on I want the user to be able to click on a word they don't know, then recieve that
-word in all it's forms, translation, a simple definition, and some sample sentences. The definitions and sample sentences
-will be generated with LLM. To help with memorizing the words any words the user clicks will be added to a personal dictionary
-which they can be drilled on with various forms of exercises; this can be a simple as fill in the blank, complete the ending
-based on case, match the definition with the words, the list goes on.
+# Ponchik Backend
+
+## What is this?
+Ponchik means doughnut in Russian, which has zero significance other than it's easy to pronounce, remember, sounds good when said in english, and most importantly ponchiks are delicious!
+So what is this project? Well it's a long thought of project for learning to read Russian. I want it to be be more than just a 'click the word to translate reader,' since Russian has a lot of morphing going on I want the user to be able to click on a word they don't know, then receive that word in all it's forms, translation, a simple definition, and some sample sentences. The definitions and sample sentences will be generated with LLM. To help with memorizing the words any words the user clicks will be added to a personal dictionary which they can be drilled on with various forms of exercises; this can be a simple as fill in the blank, complete the ending based on case, match the definition with the words, the list goes on.
+
+## What is done?
+- ePUB parsing
+- Returning get request of word's forms based, ex: "http://localhost:8080/findClickedWord/привези"
+- Generating sentences, definitions, and other word information with POST request
+
+## Can I help?
+I don't believe I need the help as it is now. This is a personal project for my learning experience. Not only learning Java and Java Spring but also the Russian language.
+However if you want to review my code, offer me suggestions, or have a great idea to make this app better, let me know!
